# python-notes

./: Readme.md  To-Convert-Code-from-ipynb→py.md  command-cheat-sheet.md
python- jupyter-notebook/: python_cheatsheet.ipynb
uv-cheatsheet/: Cheatsheet.md  Readme.md
uv-cheatsheet/project-0/: Readme.md  app.py
uv-cheatsheet/project-1/: README.md  main.py  pyproject.toml  requirements.txt
