[project]
name = "project-1"
version = "0.1.0"
description = "Add your description here"

requires-python = ">=3.11"

# Runtime deps (used or not, all pinned):
dependencies = [
  "requests==2.32.3",
  "httpx==0.27.2",
  "pydantic==2.9.2",
  "numpy==2.1.2",
  "rich==13.9.2",
  "psutil==5.7.3",
]


# Optional: dev/test tools (PEP 735 groups)
[dependency-groups]
dev = [
  "pytest==8.3.3",
  "ruff==0.6.9",
]

